--- a/Ocean.html
+++ b/Ocean.html
@@ -92,7 +92,7 @@
         
         <!-- Botões -->
         <a href="https://oceanexpress.com.br/" class="btn btn-empresa" target="_blank">Site</a>
-        <a href="https://www.instagram.com/suaempresa" class="btn btn-instagram" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/oceanexpress/" class="btn btn-instagram" target="_blank">Instagram</a>
         <a href="https://www.gov.br/receitafederal/pt-br/assuntos/aduana-e-comercio-exterior/importacao-e-exportacao/oea/biblioteca-do-oea/outros-materiais-oea/perguntas-respostas.pdf" class="btn btn-programaOEA" target="_blank">Programa OEA</a>
         <a href="https://www.facebook.com/theoceanexpress/" class="btn btn-facebook" target="_blank">Facebook</a>
         <a href="https://www.linkedin.com/in/ocean-express-brasil/" class="btn btn-linkedin" target="_blank">Linkedin</a>
